namespaces/live-1.cloud-platform.service.justice.gov.uk/jason/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jason
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "jason"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "jason"
    cloud-platform.justice.gov.uk/slack-channel: "jason"
    cloud-platform.justice.gov.uk/application: "jason"
    cloud-platform.justice.gov.uk/owner: "jason: jason@jason"
    cloud-platform.justice.gov.uk/source-code: "https://jason"
    cloud-platform.justice.gov.uk/team-name: "jason"
